--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Index.cshtml
@@ -40,79 +40,60 @@
                             <table class="table table-striped dataTable no-footer" id="table-1" role="grid" aria-describedby="table-1_info">
                                 <thead>
                                     <tr role="row">
-                                        <th class="text-center">
-                                            STT
-                                        </th>
+                                        <th class="text-center">STT</th>
                                         <th>Kỳ báo cáo</th>
                                         <th>Trạng thái</th>
-                                        <th class="text-center">
-
-                                        </th>
+                                        <th class="text-center"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model)
-                                                <th style="width: 3%"></th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                                <tr class="Search">
-                                                    <td>
-                                                        @i
-                                                    </td>
-                                                    <td>
-                                                        <a href="@Url.Action("FormReports", "ReportPeriods", new {id = item.report_period_id })">@item.report_period_name</a>
-                                                    </td>
-                                                    <td>
-                                                        @if (item.start_date <= DateTime.Now && item.deadline_date >= DateTime.Now)
-                                                        {
-                                                            <div class="badge badge-success">Đang báo cáo</div>
-                                                        }
-                                                        else if (item.deadline_date <= DateTime.Now && item.end_date >= DateTime.Now)
-                                                        {
-                                                            <div class="badge badge-warning">Trễ hạn báo cáo</div>
-                                                        }
-                                                        else
-                                                        {
-                                                            <div class="badge badge-danger">Không được báo cáo</div>
-                                                        }
-                                                    </td>
-                                                    <td>
-                                                        <div class="form-button-action">
-                                                            <a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-info" data-original-title="Thông tin" href="@Url.Action("Details", "ReportPeriods", new { id = item.report_period_id })" target="_blank">
-                                                                <i class="fa fa-info"></i>
-                                                            </a>
-                                                            &nbsp;
-                                                            <a style="width:1px" type="button" data-toggle="tooltip" title="" class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "ReportPeriods", new { id = item.report_period_id })" target="_blank">
-                                                                <i class="fa fa-edit"></i>
-                                                            </a>
-                                                        </div>
-                                                    </td>
-                                                </tr>
+
+                                    {
+                                        i = i + 1;
+
+                                    <tr class="Search">
+                                        <td class="text-center">
+                                            @i
+                                        </td>
+                                        <td>
+                                            <a href="@Url.Action("FormReports", "ReportPeriods", new {id = item.report_period_id })">@item.report_period_name</a>
+                                        </td>
+                                        <td>
+                                            @if (item.start_date <= DateTime.Now && item.deadline_date >= DateTime.Now)
+                                            {
+                                                <div class="badge badge-success">Đang báo cáo</div>
                                             }
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
+                                            else if (item.deadline_date <= DateTime.Now && item.end_date >= DateTime.Now)
+                                            {
+                                                <div class="badge badge-warning">Trễ hạn báo cáo</div>
+                                            }
+                                            else
+                                            {
+                                                <div class="badge badge-danger">Không được báo cáo</div>
+                                            }
+                                        </td>
+                                        <td class="text-center">
+                                            <div class="buttons">
+                                                <a class="btn btn-icon btn-info" data-original-title="Thông tin" href="@Url.Action("Details", "ReportPeriods", new { id = item.report_period_id })">
+                                                    <i class="fas fa-info-circle"></i>
+                                                </a>
+                                                <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "ReportPeriods", new { id = item.report_period_id })">
+                                                    <i class="far fa-edit"></i>
+                                                </a>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-                                            }
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+</section>
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script>
     $(document).ready(function () {
