--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                                 <a href="@Url.Action("Index", "FacManager", new { Area = "FacultyAreas" })" class="nav-link"><i data-feather="users"></i><span>Quản lý tham dự</span></a>
                             </li>
                             <li class=@(ViewBag.Title == "Quản lý báo cáo" ? "active" : "nav-item")>
-                                <a href="" class="nav-link"><i data-feather="edit"></i><span>Quản lý báo cáo</span></a>
+                                <a href="@Url.Action("Index", "FacReport", new { Area = "FacultyAreas" })" class="nav-link"><i data-feather="edit"></i><span>Quản lý báo cáo</span></a>
                             </li>
                             <li class="dropdown">
                             <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
