--- a/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
@@ -26,50 +26,101 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            @foreach (var items in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.ToList())
+                            @foreach (var items in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_lv == 1).ToList())
                             {
-                                if (items.Category.category_of_id == null)
-                                {
-                                    i = 0;
-                                    j++;
-                                    <br />
-                                    <div class="section-title mt-1" style="font-weight:bold">
-                                        @(((char) j).ToString()). @items.Category.category_content.ToUpper()
 
-                                    </div>
-                                }
-                                else
+                                i = 0;
+                                j++;
+                                <br />
+                                <div class="section-title mt-1" style="font-weight:bold">
+                                    @(((char) j).ToString()). @items.Category.category_content.ToUpper()
+
+                                </div>
+
+                                foreach (var items_lv2 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
                                 {
-                                    lstId += items.category_id + "-";
+                                    lstId += items_lv2.category_id + "-";
                                     i++;
+
                                     <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
                                         <div class="col-lg-12">
-                                            <input hidden id="dem-@items.category_id" value="@models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id).Count()" />
-                                            <input hidden id="frmPerDetail-@items.category_id" value="@items.form_personal_report_detail_id" />
                                             <table class="table table-bordered dataTable">
                                                 <tbody>
                                                     <tr class="" style="max-width: 50px">
-                                                        <th>@(i). @items.Category.category_content</th>
+                                                        <th>@(i). @items_lv2.Category.category_content</th>
                                                     </tr>
-                                                    @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id).Count() > 0)
+                                                    @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).Count() > 0)
                                                     {
                                                         int inputIndex = 0;
-                                                        foreach (var itemss in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id).ToList())
+                                                        foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).ToList())
                                                         {
                                                             inputIndex++;
-                                                            <tr id="formInput-@items.category_id-@inputIndex">
+                                                            <tr id="formInput-@items_lv2.category_id-@inputIndex">
                                                                 <td>
-                                                                    <input readonly type="text" value="@itemss.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items.category_id-@inputIndex">
-                                                                    <p hidden id="validation-noidung-@items.category_id-@inputIndex" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
+                                                                    <input readonly type="text" value="@items_content.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items_lv2.category_id-@inputIndex">
                                                                 </td>
                                                             </tr>
                                                         }
                                                     }
                                                     <tr hidden id="append-@items.category_id"></tr>
+
                                                 </tbody>
+
                                             </table>
+
                                         </div>
+
                                     </div>
+                                    if (models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
+                                    {
+                                            <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                                <div class="col-lg-12">
+                                                    <table class="table table-bordered dataTable">
+                                                        <tbody>
+                                                            <tr class="" style="max-width: 50px">
+                                                                @foreach (var items_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
+                                                                {
+                                                                    <th>@items_lv3.Category.category_content</th>
+                                                                }
+
+                                                            </tr>
+                                                            @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
+
+                                                            @foreach (var item in items_groupby)
+                                                            {
+                                                                <tr>
+
+                                                                    @foreach (var items_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_personal_report_detail_id == item.Key).ToList())
+                                                                    {
+                                                                        int inputIndex = 0;
+                                                                        inputIndex++;
+                                                                        if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv3.form_personal_report_detail_id).Count() > 0)
+                                                                        {
+
+                                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv3.form_personal_report_detail_id).ToList())
+                                                                            {
+                                                                                <td>
+                                                                                    <input readonly type="text" value="@items_content.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items_lv3.category_id-@inputIndex">
+                                                                                </td>
+
+                                                                            }
+                                                                        }
+
+                                                                    }
+                                                                </tr>
+                                                            }
+
+
+                                                            <tr hidden id="append-@items.category_id"></tr>
+
+                                                        </tbody>
+
+                                                        </table>
+
+                                                </div>
+
+                                            </div>
+                                    }
                                 }
                             }
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
