--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -58,7 +58,8 @@
                                 <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                                 <ul class="dropdown-menu">
                                     <li><a class="nav-link" href="@Url.Action("Index", "ListReportDepartment", new { Area = "Admin" })">Bộ môn</a></li>
-                                    <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Admin" })">Cá nhân</a></li>
+                                    <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Admin" })">Giảng viên</a></li>
+                                    <li><a class="nav-link" href="@Url.Action("Index", "ListReportStaff", new { Area = "Admin" })">Nhân viên</a></li>
                                 </ul>
                             </li>
                             <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
