--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentDetail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentDetail.cshtml
@@ -9,130 +9,95 @@
     string lstId = "";
 
     CP25Team04Entities models = new CP25Team04Entities();
-    int idperiod = Model.First().FormDepartmentReport.report_period_id;
-    var form = models.DepartmentReports.Where(p => p.report_period_id == idperiod);
     string emails = User.Identity.Name;
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
-    var formPer = models.DepartmentReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(accID));
 }
-
-<div class="col-12">
-    <div class="card">
-        <div class="card-body">
-            @foreach (var items in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_lv == 1).ToList())
-            {
-
-                i = 0;
-                j++;
-                <br />
-                <div class="section-title mt-1" style="font-weight:bold">
-                    @(((char) j).ToString()). @items.Category.category_content.ToUpper()
-
-                </div>
-
-                foreach (var items_lv2 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
+@if (ViewBag.FormDep == true)
+{
+    <div class="alert alert-danger" role="alert">
+        Bạn chưa chỉnh sửa biểu mẫu báo cáo
+    </div>
+}
+else
+{
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                @foreach (var item in Model.Where(c => c.Category.category_lv == 1).ToList())
                 {
-                    lstId += items_lv2.category_id + "-";
-                    i++;
-
-                    <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
-                        <div class="col-lg-12">
-
-                            <table class="table table-bordered dataTable">
-                                <tbody>
-                                    <tr class="" style="max-width: 50px">
-                                        <th>@(i). @items_lv2.Category.category_content</th>
-                                    </tr>
-
-                                    @if (models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id).Count() > 0)
-                                    {
-
-                                        int inputIndex = 0;
-                                        if (!models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
-                                        {
-                                            foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id).ToList())
-                                            {
-                                                inputIndex++;
-                                                <tr id="formInput-@items_lv2.category_id-@inputIndex">
-                                                    <td>
-                                                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
-                                                    </td>
-                                                </tr>
-                                            }
-                                        }
-                                        else
-                                        {
-                                            foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id).ToList())
-                                            {
-                                                inputIndex++;
-                                                <tr id="formInput-@items_lv2.category_id-@inputIndex" class="d-none">
-                                                    <td>
-                                                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
-                                                    </td>
-                                                </tr>
-                                            }
-                                        }
-                                    }
-                                    <tr hidden id="append-@items.category_id"></tr>
-                                </tbody>
-                            </table>
-
-                        </div>
+                    i = 0;
+                    j++;
+                    <br />
+                    <div class="section-title mt-1" style="font-weight:bold">
+                        @(((char) j).ToString()). @item.Category.category_content.ToUpper()
 
                     </div>
-                    if (models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
-                    {
-                        <div>
-                            <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
-                                @foreach (var items_lv3 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
-                                {
-                                    <div class="col">
-                                        <table class="table table-bordered dataTable">
-                                            <tbody>
-                                                <tr class="" style="max-width: 50px">
-                                                    <th>@items_lv3.Category.category_content</th>
-                                                </tr>
-                                                @{ var items_groupby = models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_department_report_detail_id == x.form_department_report_detail_id).GroupBy(x => x.form_department_report_detail_id).ToList();}
 
-                                                @foreach (var item in items_groupby)
-                                                {
-                                                    foreach (var items_content_lv3 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_department_report_detail_id == item.Key).ToList())
-                                                    {
-                                                        int inputIndex = 0;
-                                                        inputIndex++;
-                                                        if (models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_content_lv3.form_department_report_detail_id).Count() > 0)
-                                                        {
-                                                            foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_content_lv3.form_department_report_detail_id).ToList())
-                                                            {
-                                                                <tr>
-                                                                    <td>
-                                                                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
-                                                                    </td>
-                                                                </tr>
-                                                            }
-                                                        }
-                                                    }
-                                                }
-                                                <tr hidden id="append-@items.category_id"></tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                }
+                    foreach (var items_lv2 in Model.Where(c => c.Category.category_lv == 2).ToList())
+                    {
+                        lstId += items_lv2.category_id + "-";
+                        i++;
+
+                        <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                            <div class="col-lg-12">
+
+                                <table class="table table-bordered dataTable">
+                                    <tbody>
+                                        <tr class="" style="max-width: 50px">
+                                            <th>@(i). @items_lv2.Category.category_content</th>
+                                        </tr>
+
+                                        <tr>
+                                            <td>
+                                                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
+                                            </td>
+                                        </tr>
+                                        <tr hidden id="append-@item.category_id"></tr>
+                                    </tbody>
+                                </table>
+
                             </div>
+
                         </div>
+                        if (Model.Any(c => c.Category.category_lv == 3))
+                        {
+                            <div>
+                                <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                    @foreach (var items_lv3 in Model.Where(c => c.Category.category_lv == 3).ToList())
+                                    {
+                                        <div class="col">
+                                            <table class="table table-bordered dataTable">
+                                                <tbody>
+                                                    <tr class="" style="max-width: 50px">
+                                                        <th>@items_lv3.Category.category_content</th>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
+                                                        </td>
+                                                    </tr>
+                                                    <tr hidden id="append-@item.category_id"></tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                        }
                     }
                 }
-            }
-            <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
-            <div class="section-title mt-3" style="font-weight:bold">
-                <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
+                <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
+                <div class="section-title mt-3" style="font-weight:bold">
+                    <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
+                </div>
+                <div class="card-body">
+                    <form action="#" class="dropzone dz-clickable" id="mydropzone">
+                        <div class="dz-default dz-message"><span>Tệp đính kèm</span></div>
+                    </form>
+                </div>
+                <hr />
             </div>
-            <div class="card-body">
-                <form action="#" class="dropzone dz-clickable" id="mydropzone">
-                    <div class="dz-default dz-message"><span>Tệp đính kèm</span></div>
-                </form>
-            </div>
-            <hr />
         </div>
     </div>
-</div>
+}
+
