--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/Department.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/Department.cshtml
@@ -11,14 +11,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Danh sách báo cáo</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Danh sách báo cáo bộ môn</h4>
                         <div class="card-header-form">
                             <form>
                                 <div class="input-group">
-                                    <input class="form-control" type="text" id="Search" placeholder="Tìm kiếm" aria-label="Search" data-width="200" style="width: 200px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                                    </div>
+                                    
                                 </div>
                             </form>
                         </div>
